clean up: remove unused methods, use Math.clamp and record patterns
Remove unused getHighestCardValue/getLowestCardValue/getDeckOfCardValueStream
from CardProvider, remove no-op self-assignment in SimulationState, replace
Math.max/Math.min with Math.clamp, and use record deconstruction patterns
throughout RolloutPolicy and MctsEngine.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>